--- a/report/main.tex
+++ b/report/main.tex
@@ -17,7 +17,7 @@
 %% review process. Some conferences, like IEEE Vis and InfoVis, have NOT
 %% in the past.
 
-%% Figures should be in CMYK or Grey scale format, otherwise, colour 
+%% Figures should be in CMYK or Grey scale format, otherwise, colour
 %% shifting may occur during the printing process.
 
 %% These few lines make a distinction between latex and pdflatex calls and they
@@ -91,7 +91,7 @@
         \scriptsize University of Illinois at Urbana-Champaign %
 \and Siwakorn Srisakaokul\thanks{e-mail: srisaka2@illinois.edu}\\ %
      \scriptsize University of Illinois at Urbana-Champaign}
-     
+
 %% A teaser figure can be included as follows, but is not recommended since
 %% the space is now taken up by a full width abstract.
 %\teaser{
@@ -100,9 +100,11 @@
 %}
 
 %% Abstract section.
-\abstract{...} % end of abstract
+\abstract{
+Human Development Index (HDI) is used for assessing the development of a country, which can be useful for comparing national policy choices between two countries. In the past several decades, the HDI is calculated for each country to show how much the country has been developed. There are many HDI data available on the United Nations Development Programme (UNDP), which shows the values of the HDI and its components of each single country, but it does not represent other information such as the relationship between a country location and its HDI, and correlation between \textit{mean years of schooling} and \textit{expected year of schooling} (both are components in the HDI). In this project, we implement a tool that can visualize not only the HDI information for each country along with the country's location but also a parallel coordinate plot to show the relationship between the HDI and its components for all the countries. Moreover, we can see how much countries develop over the past several years. With the tool, we can observe interesting findings. For example, the countries located in the lower part of the earth tends to have low expected years of schooling.
+} % end of abstract
 
-%% ACM Computing Classification System (CCS). 
+%% ACM Computing Classification System (CCS).
 %% See <http://www.acm.org/about/class> for details.
 %% We recommend the 2012 system <http://www.acm.org/about/class/class/2012>
 %% For the 2012 system use the ``\CCScatTwelve'' which command takes four arguments.
