--- a/report/implementation.tex
+++ b/report/implementation.tex
@@ -1,5 +1,5 @@
 \section{Implementation}
-We implement our tool in JavaScript because we want our tool to be a web-based application, which can be easy to accessed. JavaScript also has a library called D3.js that is used for producing data visualization in web browsers. Our tool can be run on a web browser. We use the built-in HTTP server , \texttt{SimpleHTTPServer}, to test and run our tool. Next we describe UI components and other tools we use in order to implement our web-based application.
+We implement our tool in JavaScript because we want our tool to be a web-based application, which can be easy to access. JavaScript also has a library called D3.js that is used for producing data visualization in web browsers. Our tool can be run in web browsers. We use the built-in HTTP server , \texttt{SimpleHTTPServer}, to test and run our tool. Next we describe UI components and other tools we use in order to implement our web-based application.
 \subsection{UI Components}
 Our tool consists of multiple UI components as follows:
 \begin{itemize}
