--- a/report/main.tex
+++ b/report/main.tex
@@ -17,7 +17,7 @@
 %% review process. Some conferences, like IEEE Vis and InfoVis, have NOT
 %% in the past.
 
-%% Figures should be in CMYK or Grey scale format, otherwise, colour
+%% s should be in CMYK or Grey scale format, otherwise, colour
 %% shifting may occur during the printing process.
 
 %% These few lines make a distinction between latex and pdflatex calls and they
@@ -51,6 +51,9 @@
 \usepackage{cite}                      % needed to automatically sort the references
 \usepackage{tabu}                      % only used for the table example
 \usepackage{booktabs}                  % only used for the table example
+\usepackage{graphicx}
+\usepackage{subcaption}
+
 %% We encourage the use of mathptmx for consistent usage of times font
 %% throughout the proceedings. However, if you encounter conflicts
 %% with other math-related packages, you may want to disable it.
