Finished datasource, combined intro with relatedwork

--- a/report/implementation.tex
+++ b/report/implementation.tex
@@ -36,7 +36,7 @@ Our tool consists of multiple UI components as follows:
 		\label{fig:controller}
 	\end{figure}
     \item \textbf{Country Selector:} the country selector includes a search bar and a list of countries. The legend color next to each country name indicates the line color of the country shown in Parallel Coordinate Plot. The search bar allows users to select countries and helps user find a specific country on the world map. In additions, when users click on a country in the list, the corresponding country polygon on the world map and corresponding country line in the parallel coordinate plot will be highlighted. The detailed information of the country will be shown on the left side in Country Info Panel.
-    \item \textbf{Country Info Panel:} the panel displays information about the country selected either from the map or from Country Selector. It contains two parts: statistics and a radar chart. \todo{add the figure and update ``xx'' $\rightarrow$} As shown in Figure xx, the radar chart provides a straightforward view of the percentiles of the HDI and its components of a selected country. It is easier for users to compare two countries from the radar chart than from simple texts, because the similarity of two countries can be captured by similar shapes (Figure~\ref{fig:panel}).
+    \item \textbf{Country Info Panel:} the panel displays information about the country selected either from the map or from Country Selector. It contains two parts: statistics and a radar chart. As shown in Figure~\ref{fig:panel}, the radar chart provides a straightforward view of the percentiles of the HDI and its components of a selected country. It is easier for users to compare two countries from the radar chart than from simple texts, because the similarity of two countries can be captured by similar shapes.
     \begin{figure}[t]
     	\centering
         \subfloat[New Zealand information]{{\includegraphics[width=3cm]{newZealand} }}%
