--- a/report/main.bib
+++ b/report/main.bib
@@ -4,3 +4,33 @@
   year =         "2017",
   url =          "https://github.com/datasets/geo-countries",
 }
+
+@misc{HDIinfo,
+  author =       "{United Nations Development Programme}",
+  title =        "{Human Development Index (HDI)}",
+  year =         "2017",
+  url =          "http://hdr.undp.org/en/content/human-development-index-hdi",
+}
+
+@misc{HDIcomponents,
+  author =       "{United Nations Development Programme}",
+  title =        "{Human Development Index and its components}",
+  year =         "2017",
+  url =          "http://hdr.undp.org/en/composite/HDI",
+}
+
+@misc{UNDPlinechart,
+  author =       "{United Nations Development Programme}",
+  title =        "{Human Development Data (1990-2015)}",
+  year =         "2017",
+  url =          "http://hdr.undp.org/en/data",
+}
+
+@misc{AmazonHDI,
+  author =       "{Amazon AWS}",
+  title =        "{Visualizing Human Development Index 2013}",
+  year =         "2017",
+  url =          "http://hdi.s3.amazonaws.com/dataviz.html",
+}
+
+
