--- a/report/datasource.tex
+++ b/report/datasource.tex
@@ -1,1 +1,2 @@
 \section{Data Source}
+We use the HDI and its components data from the UNDP website~\cite{HDIcomponents,HDIinfo}, which can be downloaded into CSV files.
