Commented out conclusion, just talk about everyting in visualization result

--- a/report/main.tex
+++ b/report/main.tex
@@ -140,7 +140,7 @@ Human Development Index (HDI) is used for assessing the development of a country
 \input{datasource}
 \input{implementation}
 \input{visualizationresult}
-\input{conclusion}
+%\input{conclusion}
 
 
 
