Finished the first draft

--- a/report/implementation.tex
+++ b/report/implementation.tex
@@ -15,7 +15,7 @@ Our tool consists of multiple UI components as follows:
 	\begin{figure}[t]
         \centering
 		\includegraphics[width=0.4\textwidth]{bivariateMap}
-		\caption{Bivaraite Map Layer}
+		\caption{Bivariate Map Layer}
 		\label{fig:bivariate}
 	\end{figure}
 	\item \textbf{Parallel Coordinate Plot:} we use the parallel coordinate plot to show the values of HDI along with its components for all the countries. Each vertical axis represents a component. Thus, each line in the plot represents a country. We allow users to brush on each vertical axis to select a range of values they are interested in. For instance, if the users are only interested in data with high HDI value and low GNI value, they can simply brush on the vertical axises corresponding to those categories to filter out uninterested data (Figure~\ref{fig:parallel}).
