--- a/report/main.tex
+++ b/report/main.tex
@@ -104,7 +104,7 @@
 
 %% Abstract section.
 \abstract{
-Human Development Index (HDI) is used for assessing the development of a country, which can be useful for comparing national policy choices between two countries. In the past several decades, the HDI is calculated for each country to show how much the country has been developed. There are many HDI data available on the United Nations Development Programme (UNDP), which shows the values of the HDI and its components of each single country, but it does not represent other information such as the relationship between a country location and its HDI, and correlation between \textit{mean years of schooling} and \textit{expected year of schooling} (both are components in the HDI). In this project, we implement a tool that can visualize not only the HDI information for each country along with the country's location but also a parallel coordinate plot to show the relationship between the HDI and its components for all the countries. Moreover, we can see how much countries develop over the past several years. With the tool, we can observe some interesting findings. For example, the countries located in the lower part of the earth tend to have low expected years of schooling.
+Human Development Index (HDI) is used for assessing human development of a country, which can be useful for comparing national policy choices between two countries. In the past several decades, the HDI is calculated for each country to show how much the country has been developed. There are many HDI data available on the United Nations Development Programme (UNDP), which shows the values of the HDI and its components of each single country, but it does not represent other information such as the relationship between a country's location and its HDI, and the correlation between \textit{mean years of schooling} and \textit{expected year of schooling} (both are components in the HDI). In this project, we implement a tool that can visualize not only the HDI information for each country along with the country's location but also a parallel coordinate plot to show the relationship between the HDI and its components for all the countries. Moreover, we can see how much countries develop over the past several years. With the tool, we can observe some interesting findings. For example, the countries located in the lower part of the earth tend to have low expected years of schooling.
 } % end of abstract
 
 %% ACM Computing Classification System (CCS).
